--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
 
       <footer class="footer">
-        <p>&copy; 2016 Company, Inc.</p>
+        <p>&copy; Annie Oh</p>
       </footer>
 
     </div> <!-- /container -->
