--- a/index.html
+++ b/index.html
@@ -34,19 +34,18 @@
     <div class="container">
       <div class="header clearfix">
         <nav>
-          <ul class="nav nav-pills pull-right">
+         /* <ul class="nav nav-pills pull-right">
             <li role="presentation" class="active"><a href="#">Home</a></li>
             <li role="presentation"><a href="#">About</a></li>
             <li role="presentation"><a href="#">Contact</a></li>
-          </ul>
+          </ul> */
         </nav>
-        <h3 class="text-muted">Project name</h3>
       </div>
 
       <div class="jumbotron">
-        <h1>Jumbotron heading</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn btn-lg btn-success" href="about.html" role="button">Sign up today</a></p>
+        <h1>Annie Oh</h1>
+        <p class="lead"> I'm a freshman at USC studying arts, technology, and the business of innovation. </p>
+        //<p><a class="btn btn-lg btn-success" href="about.html" role="button">Sign up today</a></p>
       </div>
 
       <div class="row marketing">
