--- a/index.html
+++ b/index.html
@@ -34,25 +34,27 @@
     <div class="container">
       <div class="header clearfix">
         <nav>
-         /* <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="#">Home</a></li>
-            <li role="presentation"><a href="#">About</a></li>
-            <li role="presentation"><a href="#">Contact</a></li>
-          </ul> */
+        
         </nav>
       </div>
 
       <div class="jumbotron">
         <h1>Annie Oh</h1>
         <p class="lead"> I'm a freshman at USC studying arts, technology, and the business of innovation. </p>
-        //<p><a class="btn btn-lg btn-success" href="about.html" role="button">Sign up today</a></p>
+
       </div>
 
+   
       <div class="row marketing">
         <div class="col-lg-6">
-          <h4>Subheading</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
+         <div class="card" style="width: 20rem;">
+  <img class="card-img-top" src="..." alt="Card image cap">
+  <div class="card-body">
+    <h4 class="card-title">Card title</h4>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
           <h4>Subheading</h4>
           <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
 
