--- a/index.html
+++ b/index.html
@@ -48,18 +48,19 @@
       <div class="row marketing">
         <div class="col-lg-6">
          <div class="card" style="width: 20rem;">
-  <img class="card-img-top" src="..." alt="Card image cap">
-  <div class="card-body">
-    <h4 class="card-title">Card title</h4>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
+         <img class="card-img-top" src="..." alt="">
+                <div class="card-body">
+                <h4 class="card-title">SIDE PROJECT</h4>
+                <p class="card-text">Created on the side</p>
+                </div>
+           
+           <div class="card" style="width: 20rem;">
+         <img class="card-img-top" src="..." alt="">
+                <div class="card-body">
+                <h4 class="card-title">SIDE PROJECT</h4>
+                <p class="card-text">Created on the side</p>
+          </div>
 </div>
-          <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
         </div>
 
         <div class="col-lg-6">
