trying out some link buttons

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
       <div class="jumbotron">
         <h1>Annie Oh</h1>
         <p class="lead"> I'm a freshman at USC studying arts, technology, and the business of innovation. </p>
-
+        <button type="button" class="btn btn-link">RESUME</button>
+        <button type="button" class="btn btn-link">CONTACT ME</button>
       </div>
 
    
