--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="description" content="">
     <meta name="author" content="Annie Oh">
     <link rel="icon" href="noun_418745_cc.png">
+    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <title>Annie Oh</title>
   
@@ -42,7 +44,7 @@
         <h1>Annie Oh</h1>
         <p class="lead"> I'm a freshman at USC studying arts, technology, and the business of innovation. </p>
         <button type="button" class="btn btn-link">RESUME</button>
-        <button type="button" class="btn btn-link">CONTACT ME</button>
+        <button type="button" class="btn btn-link" data-toggle="popover" data-placement="right" data-content="annieoh@usc.edu">CONTACT ME</button>
       </div>
 
    
