--- a/index.html
+++ b/index.html
@@ -53,24 +53,24 @@
     <img class="card-img-top" src="testimage.png" alt="Card image cap">
     <div class="card-block">
       <h4 class="card-title">Side Project</h4>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <p class="card-text">This is a tent. This content is a little bit longer.</p>
+
     </div>
   </div>
   <div class="card">
     <img class="card-img-top" src="testimage.png" alt="Card image cap">
     <div class="card-block">
       <h4 class="card-title">Side Project</h4>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <p class="card-text">This card has supporting texional content.</p>
+
     </div>
   </div>
   <div class="card">
     <img class="card-img-top" src="testimage.png" alt="Card image cap">
     <div class="card-block">
       <h4 class="card-title">Side Project</h4>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <p class="card-text">This is a wider card with s than the first to show that equal height action.</p>
+
     </div>
   </div>
 </div>
@@ -80,8 +80,8 @@
     <img class="card-img-top" src="testimage.png" alt="Card image cap">
     <div class="card-block">
       <h4 class="card-title">Side Project</h4>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <p class="card-text">This is a longer card with supporting text below as a natural </p>
+      
     </div>
   </div>
   <div class="card">
@@ -89,15 +89,14 @@
     <div class="card-block">
       <h4 class="card-title">Side Project</h4>
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+
     </div>
   </div>
   <div class="card">
     <img class="card-img-top" src="testimage.png" alt="Card image cap">
     <div class="card-block">
       <h4 class="card-title">Side Project</h4>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <p class="card-text">This is a wider card with supportt equal height action.</p>
     </div>
   </div>
 </div>
