--- a/index.html
+++ b/index.html
@@ -40,6 +40,40 @@
       
       </div>
 
+<!--Card-->
+<div class="card card-cascade wider reverse my-4">
+
+    <!--Card image-->
+    <div class="view overlay hm-white-slight">
+        <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(70).jpg" class="img-fluid">
+        <a href="#!">
+            <div class="mask"></div>
+        </a>
+    </div>
+    <!--/Card image-->
+
+    <!--Card content-->
+    <div class="card-body text-center">
+        <!--Title-->
+        <h4 class="card-title"><strong>My adventure</strong></h4>
+        <h5 class="indigo-text"><strong>Photography</strong></h5>
+
+        <p class="card-text">Sed ut perspiciatis unde omnis iste natus sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
+        </p>
+
+        <!--Linkedin-->
+        <a class="icons-sm li-ic"><i class="fa fa-linkedin"> </i></a>
+        <!--Twitter-->
+        <a class="icons-sm tw-ic"><i class="fa fa-twitter"> </i></a>
+        <!--Dribbble-->
+        <a class="icons-sm fb-ic"><i class="fa fa-facebook"> </i></a>
+
+    </div>
+    <!--/.Card content-->
+
+</div>
+<!--/.Card-->
+
       <div class="jumbotron">
         <h1>Annie Oh</h1>
         <p class="lead"> I'm a freshman at USC studying arts, technology, and the business of innovation. </p>
