--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
     <!--Card content-->
     <div class="card-body text-center">
         <!--Title-->
-        <h4 class="card-title"><strong>My adventure</strong></h4>
-        <h5 class="indigo-text"><strong>Photography</strong></h5>
-
-        <p class="card-text">Sed ut perspiciatis unde omnis iste natus sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
+        <h4 class="card-title"><strong>Annie Oh</strong></h4>      
+        <p class="card-text">I'm a freshman at USC studying arts, technology, and the business of innovation.
         </p>
+        <button type="button" class="btn btn-outline-default waves-effect">RESUME</button>
+        <button type="button" class="btn btn-outline-default waves-effect">CONTACT ME</button>
 
         <!--Linkedin-->
         <a class="icons-sm li-ic"><i class="fa fa-linkedin"> </i></a>
@@ -76,7 +76,7 @@
 
       <div class="jumbotron">
         <h1>Annie Oh</h1>
-        <p class="lead"> I'm a freshman at USC studying arts, technology, and the business of innovation. </p>
+        <p class="lead">  </p>
         <button type="button" class="btn btn-link">RESUME</button>
         <button type="button" class="btn btn-link" data-toggle="popover" data-placement="right" data-content="annieoh@usc.edu">CONTACT ME</button>
       </div>
