material design cards

--- a/index.html
+++ b/index.html
@@ -76,56 +76,136 @@
 
      
 <div class="card-deck">
-  <div class="card">
-    <img class="card-img-top" src="testimage.png" alt="Card image cap">
-    <div class="card-block">
-      <h4 class="card-title">Side Project</h4>
-      <p class="card-text">This is a tent. This content is a little bit longer.</p>
+ <!--Card-->
+<div class="card">
+
+    <!--Card image-->
+    <div class="view overlay hm-white-slight">
+        <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%287%29.jpg" class="img-fluid" alt="">
+        <a href="#">
+            <div class="mask"></div>
+        </a>
     </div>
-  </div>
-  
-  <div class="card">
-    <img class="card-img-top" src="testimage.png" alt="Card image cap">
-    <div class="card-block">
-      <h4 class="card-title">Side Project</h4>
-      <p class="card-text">This is a tent. This content is a little bit longer.</p>
+
+    <!--Card content-->
+    <div class="card-body">
+        <!--Title-->
+        <h4 class="card-title">Card title</h4>
+        <!--Text-->
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     </div>
-  </div>
-  
-  <div class="card">
-    <img class="card-img-top" src="testimage.png" alt="Card image cap">
-    <div class="card-block">
-      <h4 class="card-title">Side Project</h4>
-      <p class="card-text">This is a tent. This content is a little bit longer.</p>
+
+</div>
+<!--/.Card-->
+   <!--Card-->
+<div class="card">
+
+    <!--Card image-->
+    <div class="view overlay hm-white-slight">
+        <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%287%29.jpg" class="img-fluid" alt="">
+        <a href="#">
+            <div class="mask"></div>
+        </a>
     </div>
-  </div>
+
+    <!--Card content-->
+    <div class="card-body">
+        <!--Title-->
+        <h4 class="card-title">Card title</h4>
+        <!--Text-->
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+
+</div>
+<!--/.Card-->
+   <!--Card-->
+<div class="card">
+
+    <!--Card image-->
+    <div class="view overlay hm-white-slight">
+        <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%287%29.jpg" class="img-fluid" alt="">
+        <a href="#">
+            <div class="mask"></div>
+        </a>
+    </div>
+
+    <!--Card content-->
+    <div class="card-body">
+        <!--Title-->
+        <h4 class="card-title">Card title</h4>
+        <!--Text-->
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+
+</div>
+<!--/.Card-->
+
+
   
 </div>
 
       <div class="card-deck">
-  <div class="card">
-    <img class="card-img-top" src="testimage.png" alt="Card image cap">
-    <div class="card-block">
-      <h4 class="card-title">Side Project</h4>
-      <p class="card-text">This is a tent. This content is a little bit longer.</p>
+   <!--Card-->
+<div class="card">
+
+    <!--Card image-->
+    <div class="view overlay hm-white-slight">
+        <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%287%29.jpg" class="img-fluid" alt="">
+        <a href="#">
+            <div class="mask"></div>
+        </a>
     </div>
-  </div>
-  
-  <div class="card">
-    <img class="card-img-top" src="testimage.png" alt="Card image cap">
-    <div class="card-block">
-      <h4 class="card-title">Side Project</h4>
-      <p class="card-text">This is a tent. This content is a little bit longer.</p>
+
+    <!--Card content-->
+    <div class="card-body">
+        <!--Title-->
+        <h4 class="card-title">Card title</h4>
+        <!--Text-->
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     </div>
-  </div>
-  
-  <div class="card">
-    <img class="card-img-top" src="testimage.png" alt="Card image cap">
-    <div class="card-block">
-      <h4 class="card-title">Side Project</h4>
-      <p class="card-text">This is a tent. This content is a little bit longer.</p>
+
+</div>
+<!--/.Card--> <!--Card-->
+<div class="card">
+
+    <!--Card image-->
+    <div class="view overlay hm-white-slight">
+        <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%287%29.jpg" class="img-fluid" alt="">
+        <a href="#">
+            <div class="mask"></div>
+        </a>
     </div>
-  </div>
+
+    <!--Card content-->
+    <div class="card-body">
+        <!--Title-->
+        <h4 class="card-title">Card title</h4>
+        <!--Text-->
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+
+</div>
+<!--/.Card--> <!--Card-->
+<div class="card">
+
+    <!--Card image-->
+    <div class="view overlay hm-white-slight">
+        <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%287%29.jpg" class="img-fluid" alt="">
+        <a href="#">
+            <div class="mask"></div>
+        </a>
+    </div>
+
+    <!--Card content-->
+    <div class="card-body">
+        <!--Title-->
+        <h4 class="card-title">Card title</h4>
+        <!--Text-->
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+
+</div>
+<!--/.Card-->
   
 </div>
 
