--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!--Card image-->
     <div class="view overlay hm-white-slight">
-        <img src="21083559_1418425628192489_1429169003995297227_o.jpg" class="img-fluid">
+        <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(70).jpg" class="img-fluid">
         <a href="#!">
             <div class="mask"></div>
         </a>
@@ -58,7 +58,7 @@
         <h4 class="card-title"><strong>Annie Oh</strong></h4>      
         <p class="card-text">I'm a freshman at USC studying arts, technology, and the business of innovation.
         </p>
-       <a class="btn btn-primary" href="test.pdf" role="button">RESUME</a>
+       <a class="btn btn-primary" href="test.pdf" target="_blank" role="button">RESUME</a>
        <a class="btn btn-primary" href="#" role="button">CONTACT ME</a>
 
         <!--Linkedin-->
