--- a/index.html
+++ b/index.html
@@ -40,7 +40,25 @@
       
       </div>
 
-<!--Card-->
+
+  <div class="row">
+                <div class="col-md-12">
+                    <div class="jumbotron text-xs-center wow bounceInDown" data-wow-delay="0.4s">
+                        <h2 class="h2-responsive">Animated Jumbotron</h2>
+                        <br>
+                        <p>Refresh and see our cool animations</p>
+                        <hr>
+
+                        <a href="" class="btn btn-primary">Download <i class="fa fa-download right"></i></a>
+
+                        <a href="" class="btn btn-secondary">Learn more <i class="fa fa-book right"></i></a>
+
+                        <a href="" class="btn btn-indigo">Go Pro <i class="fa fa-star right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <!--/ Jumbotron -->
+      <!--Card-->
 <div class="card card-cascade wider reverse my-4">
 
     <!--Card image-->
