--- a/index.html
+++ b/index.html
@@ -40,24 +40,15 @@
       
       </div>
 
-
-  <div class="row">
-                <div class="col-md-12">
-                    <div class="jumbotron text-xs-center wow bounceInDown" data-wow-delay="0.4s">
-                        <h2 class="h2-responsive">Animated Jumbotron</h2>
-                        <br>
-                        <p>Refresh and see our cool animations</p>
-                        <hr>
-
-                        <a href="" class="btn btn-primary">Download <i class="fa fa-download right"></i></a>
-
-                        <a href="" class="btn btn-secondary">Learn more <i class="fa fa-book right"></i></a>
-
-                        <a href="" class="btn btn-indigo">Go Pro <i class="fa fa-star right"></i></a>
-                    </div>
-                </div>
-            </div>
-            <!--/ Jumbotron -->
+<div class="container">
+  <div class="jumbotron">
+    <h1>Bootstrap Tutorial</h1> 
+    <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing
+    responsive, mobile-first projects on the web.</p> 
+  </div>
+  <p>This is some text.</p> 
+  <p>This is another text.</p> 
+</div>
       <!--Card-->
 <div class="card card-cascade wider reverse my-4">
 
